fix: Correct logo image path and adjust header logo visibility in responsive design

--- a/src/css/components/app.css
+++ b/src/css/components/app.css
@@ -4,9 +4,10 @@
   scale: 0.85;
   width: 100%;
   background-color: var(--bg-300);
-  border-radius: inherit;
+  border-radius: var(--radius-200);
   box-shadow: var(--shadow);
-  transition: inset 300ms ease-in-out, scale 300ms 100ms ease-in-out;
+  transition: inset 300ms ease-in-out, scale 300ms 100ms ease-in-out,
+    border-radius 300ms ease-in-out;
 }
 
 @media (min-width: 23.438em) {
@@ -17,6 +18,7 @@
 
 @media (min-width: 48em) {
   .app {
+    border-radius: inherit;
     position: static;
     scale: 1;
   }
@@ -31,6 +33,7 @@
 }
 
 .app.show {
+  border-radius: inherit;
   inset: 0 auto 0 0;
   scale: 1;
 }
@@ -49,6 +52,26 @@
 .app__toggleList > span,
 .app__header--buttons > span > span {
   font-size: 1.25em;
+}
+
+.app__header--logo {
+  display: none;
+  width: 1.5em;
+}
+
+@media (min-width: 48em) {
+  .app__toggleList--container {
+    display: none;
+  }
+
+  .app__header--logo {
+    display: block;
+  }
+}
+
+.app__header--logo__image {
+  width: 100%;
+  height: auto;
 }
 
 .app__task--header {
